Weiteren Text in seiteeins eingefügt.

--- a/seiteeins.html
+++ b/seiteeins.html
@@ -10,6 +10,7 @@
 <h1>Agentur MM's Erste Seite</h1>
 <p>
 Der Inhalt der ersten Seite.
+Auf dieser Seite stellen wir das Projekt vor.
 </p>
 
 </body>
