Ein Textzeile auf seiteeins wurde hinzugefügt.

--- a/seiteeins.html
+++ b/seiteeins.html
@@ -11,6 +11,7 @@
 <p>
 Der Inhalt der ersten Seite.
 Auf dieser Seite stellen wir das Projekt vor.
+Das Projekt dient dem Erlernen von git.
 </p>
 
 </body>
