--- a/seiteeins.html
+++ b/seiteeins.html
@@ -14,6 +14,7 @@ Auf dieser Seite stellen wir das Projekt vor.
 Das Projekt dient dem Erlernen von git.
 Das ist ein Beipiel.
 Das Beispiel dient dem Testen.
+Das Testen geschieht mit einem zu diesem Zweck angelegtem Projekt.
 </p>
 
 </body>
